# fpl_analytics

./: .env_template  .envrc  .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.dlt/: secrets.toml
.github/workflows/: deploy_fpl_analytics_backend_to_modal.yml  deploy_fpl_analytics_frontend_to_modal.yml  deploy_fpl_analytics_web_app_to_modal.yml  deploy_modal_pipeline_runner.yml
.streamlit/: secrets.toml
dbt_fpl_analytics/models/: _sources.yml
dbt_fpl_analytics/models/core/: _schema.yml  fct_standings.sql
dbt_fpl_analytics/models/staging/: _schema.yml  stg_gameweeks.sql  stg_players.sql
extract_load/: load_fixtures.py  load_fpl.py  loaders.py
helpers/: copy_motherduck_to_local.py  view_local.py
modal/: fpl_analytics_backend.py  fpl_analytics_web_app.py  pipeline_runner.py  test_app.py
transform/: transformer.py
transform/models/: _sources.yml
transform/models/core/: _schema.yml  fct_fixtures.sql  fct_standings.sql  obt_player_gameweek_stats.sql  obt_players.sql
transform/models/staging/: _schema.yml  stg_fixtures.sql  stg_players.sql  stg_standings.sql
transform/models/staging/football_data/: stg_fixtures.sql  stg_standings.sql
transform/models/staging/fpl/: stg_gameweeks.sql  stg_player_gameweek_stats.sql  stg_players.sql  stg_positions.sql  stg_teams.sql
ui/: app.py  inputs.py  loaders.py  new_app.py  utils.py  visuals.py
