[project]
name = "fpl-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "dbt>=1.0.0.40.7",
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.9.6",
    "dlt[parquet]>=1.17.1",
    "duckdb>=1.4.1",
    "emoji>=2.15.0",
    "httpx>=0.28.1",
    "modal>=1.2.0",
    "polars>=1.34.0",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Tell setuptools which packages to include
[tool.setuptools.packages.find]
where = ["."]
include = ["extract_load*", "transform*", "modal*"]
exclude = ["ui*", "logs*", "data*", "target*", "dbt_packages*", "dbt_project*"]
